# DeepZero

./: .gitignore  README.md  config.py  dataset.py  generate.py  model.py  pyproject.toml  run  run.py  sample_data.txt  shell.nix  tokenizer.py  train.py
benchmarks/: optimizer_results.csv  optimizer_results.json  optimizer_summary.md
configs/: dataset_mixtures.yaml  default.yaml  experiment.yaml  model.yaml  tiny_codes.yaml
configs/training/: base.yaml  full.yaml  research.yaml  sweep.yaml  tiny.yaml
deepzero/: __init__.py
deepzero/benchmarks/: __init__.py  optimizer.py  tokenizer.py
deepzero/config/: loader.py
deepzero/datasets/: __init__.py  base.py  humaneval.py  loader.py  local.py  mbpp.py  mixture.py  pipeline.py  quality.py  replay.py  the_stack.py  tiny_codes.py  tiny_codes_v2.py  tiny_textbooks.py
deepzero/evaluation/: __init__.py  benchmark.py  coding.py  executor.py  sandbox.py  scoring.py  scoring_v2.py  suite.py  weakness.py
deepzero/experiments/: __init__.py  compare.py  dataset_bench.py  dataset_reporting.py  (+8 more)
docs/: api.md  architecture.md  dependencies.md  experiments.md  getting-started.md  optimizers.md  roadmap.md
rl/: buffer.py  config.py  evaluate.py  logger.py  loop.py  run.py  tasks.py
scripts/: benchmark.py  benchmark_optimizers.py  benchmark_tokenizers.py  export.py  generate.py  generate_tasks.py  repl.py  run.py  run_dataset_bench.py  run_eval.py  sweep.py  train.py  train_pipeline.py
tests/: test_dataset.py  test_inference.py  test_model.py  test_r0_2.py  test_r0_3.py  test_r0_4.py  test_sandbox.py  test_tokenizer.py
(+42 files in other folders)
